--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,58 +17,58 @@ services:
       - /home/:/media
       - /home/torrents:/downloads
 
-  plex:
-    image: jaymoulin/plex:1.16.5
-    expose:
-      - 32400
-      - 33400
-    hostname: raspberrypi
-    volumes:
-      - /home/Plex Media Server:/root/Library/Application Support/Plex Media Server
-      - /Home/:/media
+#  plex:
+#    image: jaymoulin/plex:1.16.5
+#    expose:
+#      - 32400
+#      - 33400
+#    hostname: raspberrypi
+#    volumes:
+#      - /home/Plex Media Server:/root/Library/Application Support/Plex Media Server
+#      - /Home/:/media
 #      - ${STORAGE}/tmp:/tmp
-    restart: unless-stopped
-    network_mode: "host"
+#    restart: unless-stopped
+#    network_mode: "host"
 #    networks: 
 #      lan:
 #        ipv4_address: 192.168.0.3#
 #
-  transmission:
-    image : jaymoulin/transmission
-    command: transmission-daemon -f -g /config
-    volumes:
-      - /home/transmission:/config
-      - /home/torrents:/downloads
-    ports:
-      - 9091:9091
-      - 51413:51413
-      - 51413:51413/udp
-    expose:
-      - 9091
-    restart: unless-stopped#
-
-  flexget:
+#  transmission:
+#    image : jaymoulin/transmission
+#    command: transmission-daemon -f -g /config
+#    volumes:
+#      - /home/transmission:/config
+#      - /home/torrents:/downloads
+#    ports:
+#      - 9091:9091
+#      - 51413:51413
+#      - 51413:51413/udp
+#    expose:
+#      - 9091
+#    restart: unless-stopped#
+#
+#  flexget:
 #    build: flexget-arm
-    image: cpoppema/docker-flexget
-    volumes:
-      - ./flexget:/config
-      - /home/torrents:/downloads
-      - /Home/:/storage
-    ports:
-      - 5050:5050
-    environment:
-      - TORRENT_PLUGIN=transmission
-      - FG_WEBUI_PASSWD=123456
-    restart: unless-stopped
-    links:
-      - transmission
-
-networks:
-  lan:
-    driver: macvlan
-    driver_opts:
-      parent: eth0
-    ipam:
-      config:
-        - subnet: "192.168.10.0/24"       
-          gateway: "192.168.10.1"
+#    image: cpoppema/docker-flexget
+#    volumes:
+#      - ./flexget:/config
+#      - /home/torrents:/downloads
+#      - /Home/:/storage
+#    ports:
+#      - 5050:5050
+#    environment:
+#      - TORRENT_PLUGIN=transmission
+#      - FG_WEBUI_PASSWD=123456
+#    restart: unless-stopped
+#    links:
+#      - transmission
+#
+#networks:
+#  lan:
+#    driver: macvlan
+#    driver_opts:
+#      parent: eth0
+#    ipam:
+#      config:
+#        - subnet: "192.168.10.0/24"       
+#          gateway: "192.168.10.1"
