--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 version: "2"
 
 services:
@@ -14,61 +13,16 @@ services:
       - 445:445
     volumes:
       - /usr/share/zoneinfo/America/Argentina/Mendoza:/etc/localtime
-      - /home/:/media
-      - /home/torrents:/downloads
+      - /home/pi/media:/media
+      - /home/pi/downloads:/downloads
 
-#  plex:
-#    image: jaymoulin/plex:1.16.5
-#    expose:
-#      - 32400
-#      - 33400
-#    hostname: raspberrypi
-#    volumes:
-#      - /home/Plex Media Server:/root/Library/Application Support/Plex Media Server
-#      - /Home/:/media
-#      - ${STORAGE}/tmp:/tmp
-#    restart: unless-stopped
-#    network_mode: "host"
-#    networks: 
-#      lan:
-#        ipv4_address: 192.168.0.3#
-#
-#  transmission:
-#    image : jaymoulin/transmission
-#    command: transmission-daemon -f -g /config
-#    volumes:
-#      - /home/transmission:/config
-#      - /home/torrents:/downloads
-#    ports:
-#      - 9091:9091
-#      - 51413:51413
-#      - 51413:51413/udp
-#    expose:
-#      - 9091
-#    restart: unless-stopped#
-#
-#  flexget:
-#    build: flexget-arm
-#    image: cpoppema/docker-flexget
-#    volumes:
-#      - ./flexget:/config
-#      - /home/torrents:/downloads
-#      - /Home/:/storage
-#    ports:
-#      - 5050:5050
-#    environment:
-#      - TORRENT_PLUGIN=transmission
-#      - FG_WEBUI_PASSWD=123456
-#    restart: unless-stopped
-#    links:
-#      - transmission
-#
-#networks:
-#  lan:
-#    driver: macvlan
-#    driver_opts:
-#      parent: eth0
-#    ipam:
-#      config:
-#        - subnet: "192.168.10.0/24"       
-#          gateway: "192.168.10.1"
+  rtorrent:
+    image: pablokbs/rutorrent-armhf
+    ports:
+      - 80:80
+      - 51413:51413
+      - 6881:6881/udp
+    volumes:
+      - /home/pi/torrents-config/rtorrent:/config/rtorrent
+      - /home/pi/downloads:/downloads
+    restart: always
