--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,21 @@ services:
       - /home/:/media
       - /home/torrents:/downloads
   
+  plex:
+    image: jaymoulin/plex:1.16.5
+    expose:
+      - 32400
+      - 33400
+    hostname: raspberrypi
+    volumes:
+      - /home/Plex Media Server:/root/Library/Application Support/Plex Media Server
+      - /Home/:/media
+      - /home/tmp:/tmp
+    restart: unless-stopped
+    networks: 
+      lan:
+        ipv4_address: 192.168.0.3
+
   transmission:
     image : jaymoulin/transmission
     command: transmission-daemon -f -g /config
