--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,3 +44,18 @@ services:
     expose:
       - 9091
     restart: unless-stopped
+
+  flexget:
+    build: flexget-arm
+    volumes:
+      - ./flexget:/config
+      - /home/torrents:/downloads
+      - /Home/:/storage
+    ports:
+      - 5050:5050
+    environment:
+      - TORRENT_PLUGIN=transmission
+      - FG_WEBUI_PASSWD=123456
+    restart: unless-stopped
+    links:
+      - transmission
