--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,31 @@ services:
       - 445:445
     volumes:
       - /usr/share/zoneinfo/America/Argentina/Mendoza:/etc/localtime
-      - /home/:/media
-      - /home/torrents:/downloads
+      - /media/'Jorge G'/media:/media
+      - /media/'Jorge G'/downloads:/downloads
+      
+  plex:
+    image: jaymoulin/plex:1.16.5
+    expose:
+      - 32400
+      - 33400
+    hostname: raspberrypi
+    volumes:
+      - /home/Plex Media Server:/root/Library/Application Support/Plex Media Server
+      - /media/'Jorge G'/media:/media
+    restart: unless-stopped
+    network_mode: "host"
+    
+ transmission:
+  image : jaymoulin/transmission
+  command: transmission-daemon -f -g /config
+  volumes:
+    - /media/'Jorge G'/transmission:/config
+    - /media/'Jorge G'/torrents:/downloads
+  ports:
+    - 9091:9091
+    - 51413:51413
+    - 51413:51413/udp
+  expose:
+    - 9091
+  restart: unless-stopped #
