--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
             - 445:445
         volumes:
             - /usr/share/zoneinfo/America/Argentina/Mendoza:/etc/localtime
-            - /media/pi/Jorge G/media:/media
-            - /media/pi/Jorge G/downloads:/downloads
+            - /media/pi/Jorge G/RPI/media:/media
+            - /media/pi/Jorge G/RPI/downloads:/downloads
       
     plex:
         image: jaymoulin/plex:1.16.5
@@ -23,7 +23,7 @@ services:
         hostname: raspberrypi
         volumes:
             - /home/Plex Media Server:/root/Library/Application Support/Plex Media Server
-            - /media/pi/Jorge G/media:/media
+            - /media/pi/Jorge G/RPI/media:/media
         restart: unless-stopped
         network_mode: "host"
         
@@ -31,8 +31,8 @@ services:
         image : jaymoulin/transmission
         command: transmission-daemon -f -g /config
         volumes:
-            - /media/pi/Jorge G/transmission:/config
-            - /media/pi/Jorge G/torrents:/downloads
+            - /media/pi/Jorge G/RPI/transmission:/config
+            - /media/pi/Jorge G/RPI/torrents:/downloads
         ports:
             - 9091:9091
             - 51413:51413
