--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,10 @@ services:
             - /home/Plex Media Server:/root/Library/Application Support/Plex Media Server
             - /media/pi/Jorge G/RPI/media:/media
         restart: unless-stopped
-        network_mode: "host"
+        #network_mode: "host"
+        networks: 
+           lan:
+               ipv4_address: 192.168.0.3
         
     transmission:
         image : jaymoulin/transmission
