--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,40 @@
 version: "2"
 services:
 
-    samba:
-        image: dperson/samba:rpi
-        restart: always
-        command: '-u "pi;123456" -s "media;/media;yes;no" -s "downloads;/downloads;yes;no"'
-        stdin_open: true
-        tty: true
-        ports:
-            - 139:130
-            - 445:445
-        volumes:
-            - /usr/share/zoneinfo/America/Argentina/Mendoza:/etc/localtime
-            - /media/pi/Jorge G/RPI/media:/media
-            - /media/pi/Jorge G/RPI/downloads:/downloads
+#    samba:
+ #       image: dperson/samba:rpi
+ #       restart: always
+  #      command: '-u "pi;123456" -s "media;/media;yes;no" -s "downloads;/downloads;yes;no"'
+ #       stdin_open: true
+ #       tty: true
+#        ports:
+   #         - 139:130
+     #       - 445:445
+  #      volumes:
+  #          - /usr/share/zoneinfo/America/Argentina/Mendoza:/etc/localtime
+  #          - /media/pi/Jorge G/RPI/media:/media
+  #          - /media/pi/Jorge G/RPI/downloads:/downloads
             - /media/pi/Jorge G/:/disco
        # network_mode: "host"
-       networks: 
-      lan:
-        ipv4_address: 192.168.0.3
+   #    networks: 
+  #    lan:
+   #     ipv4_address: 192.168.0.3
 
       
-    plex:
-        image: jaymoulin/plex:1.16.5
-        expose:
-            - 32400
-            - 33400
-        hostname: raspberrypi
-        volumes:
-            - /home/Plex Media Server:/root/Library/Application Support/Plex Media Server
-            - /media/pi/Jorge G/RPI/media:/media
-        restart: unless-stopped
+  #  plex:
+   #     image: jaymoulin/plex:1.16.5
+    #    expose:
+    #        - 32400
+    #        - 33400
+    #    hostname: raspberrypi
+     #   volumes:
+    #        - /home/Plex Media Server:/root/Library/Application Support/Plex Media Server
+    #        - /media/pi/Jorge G/RPI/media:/media
+     #   restart: unless-stopped
        # network_mode: "host"
-        networks: 
-      lan:
-        ipv4_address: 192.168.0.4
+    #    networks: 
+   #   lan:
+    #    ipv4_address: 192.168.0.4
 
 
         
