--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,9 +51,4 @@ services:
         expose:
             - 9091
         restart: unless-stopped
-    #    network_mode: "host"
-networks: 
-      lan:
-        ipv4_address: 192.168.0.5
-
-
+        network_mode: "host"
