--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "2"
+version: "3"
 services:
 
 #    samba:
@@ -14,7 +14,7 @@ services:
   #          - /usr/share/zoneinfo/America/Argentina/Mendoza:/etc/localtime
   #          - /media/pi/Jorge G/RPI/media:/media
   #          - /media/pi/Jorge G/RPI/downloads:/downloads
-            - /media/pi/Jorge G/:/disco
+  #          - /media/pi/Jorge G/:/disco
        # network_mode: "host"
    #    networks: 
   #    lan:
